--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "react-dom": "^0.14.3",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.9.10"
   },
   "bugs": {
