--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Alejandro Navarro",
   "license": "MIT",
   "devDependencies": {
+    "autoprefixer": "^6.7.2",
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.1",
@@ -22,12 +23,15 @@
     "css-loader": "^0.26.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "postcss-loader": "^1.2.2",
+    "postcss-nested": "^1.0.0",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux-provide": "^7.0.0-rc.12",
