--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "only for learn react js",
   "main": "./build/index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -28,7 +30,8 @@
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "@kadira/storybook": "^2.21.0"
   },
   "dependencies": {
     "classnames": "^2.2.5",
