change webpack dev server config (is a bit silly)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "only for learn react js",
   "main": "./build/index.js",
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --port 9000 --hot --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
