--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   },
   "bugs": {
     "url": "https://github.com/highmax/learning-react/issues"
