--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "classnames": "^2.2.5",
     "react": "^0.14.6",
     "react-dnd": "^2.2.3",
-    "react-dnd-html5-backend": "^2.2.3",
+    "react-dnd-touch-backend": "^0.3.5",
     "react-dom": "^0.14.6",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
