--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "author": "juan gabriel ramirez",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
     "babel-core": "^6.0.20",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.1",
@@ -42,7 +41,8 @@
     "react-dom": "^0.14.6",
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "workbox-sw": "^1.0.0"
   },
   "bugs": {
     "url": "https://github.com/highmax/learning-react/issues"
